--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.79.1",
     "simplebar-react": "^3.2.6",
     "tw-elements-react": "^1.0.0-alpha-end",
