--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "sass": "^1.79.1",
     "simplebar-react": "^3.2.6",
     "tw-elements-react": "^1.0.0-alpha-end",
