--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -31,7 +33,8 @@
     "simplebar-react": "^3.2.6",
     "tw-elements-react": "^1.0.0-alpha-end",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "eslintConfig": {
     "extends": [
