--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "flowbite": "^2.4.1",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
